# filter-arc-archived-tabs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  clean-arc.sh  com.user.clean-arc.plist  com.user.filter-arc-archived-tabs.plist  filter.py  listdate.py  pyproject.toml
