[project]
name = "filter-arc-archived-tabs"
version = "0.1.0"
description = "Clean Arc Tabs Archive"
authors = [
    { name = "Patrick van der Smagt", email = "" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/filter-arc-archived-tabs"]
